--- a/index.html
+++ b/index.html
@@ -36,16 +36,8 @@
             <section id="subactivities" class="subsection">
                 <h3>🏢 최첨단 빌딩 모형 전시회</h3>
                 공학 기술과 창의적 건축 설계를 접목시킨 미래지향적 건축물입니다. 보통의 건축물과 달리 우리 동아리만의 독특한 콘셉트와 방향성이 돋보이도록 설계했습니다. 모든 부원들이 참여하여 만든 만큼 퀄리티 하나는 보장합니다.
-                <div class="slider">
-                    <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-                    <div class="slide-container">
-                        <img class="slide" src="image1.jpg" alt="빌딩 모형 1" style="display: block;">
-                        <img class="slide" src="image2.jpg" alt="빌딩 모형 2" style="display: none;">
-                        <img class="slide" src="image3.jpg" alt="빌딩 모형 3" style="display: none;">
-                        <img class="slide" src="image4.jpg" alt="빌딩 모형 4" style="display: none;">
-                    </div>
-                    <button class="next" onclick="changeSlide(1)">&#10095;</button>
-                </div>
+		<br>
+                <img class="slider" src="image.jpg"/>
             </section>
             <section id="subactivities" class="subsection">
                 <h3>🍦 아이스크림 제조 체험</h3>
@@ -64,8 +56,6 @@
             본 웹사이트는 동아리 축제 체험 부스를 소개하기 위해 제작되었습니다.
         </p>
     </main>
-
-    <script src="script.js"></script>
 </body>
 
 </html>tps://static.app/js/static.js" type="text/javascript"></script>
