--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
             <section id="subactivities" class="subsection">
                 <h3>🍦 아이스크림 제조 체험</h3>
-                <p>부스에 방문하시면 준비된 드라이아이스를 통해 여러분께서 직접 아이스크림을 만들어볼 수 있습니다.</p>
+                <p>부스에 준비된 미니게임들을 통해 모은 토큰으로 아이스크림을 획득하실 수 있습니다.</p>
               <b>맛 선택 가능: 바닐라, 딸기, 초코, 블루베리, 망고</b>
             </section>
         </section>
