--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <main>
         <section id="intro" class="section">
-            <h2>부스 소개</h2><br>
-						<p>미래를 창조하는 공학의 세계로 여러분을 초대합니다!</p>
+            <h2>부스 체험 방법</h2><br>
+			<p>미래를 창조하는 공학의 세계로 여러분을 초대합니다!</p>
           	<p>병점고 공학·건축 융합 동아리 FM이 1년동안 준비한 프로젝트를 여러분께 소개할 수 있어 굉장히 기쁩니다.</p>
           	<p>방문하시면 전시된 미래지향적 건축물을 보실 수 있는 것과 더불어 직접 아이스크림을 만들고 시식할 수 있습니다.</p>
           	<p>방문하시면 공학의 재미, 미래의 기술을 직접 체험하실 수 있도록 해드리겠습니다.</p>
@@ -40,9 +40,8 @@
                 <img class="image" src="image.jpg"/>
             </section>
             <section id="subactivities" class="subsection">
-                <h3>🍦 아이스크림 제조 체험</h3>
-                <p>부스에 준비된 미니게임들을 통해 모은 토큰으로 아이스크림을 획득하실 수 있습니다.</p>
-              <b>맛 선택 가능: 바닐라, 딸기, 초코, 블루베리, 망고</b>
+                <h3>🍦 아이스크림 증정</h3>
+                부스에 준비된 미니게임들을 통해 모은 토큰으로 <b>아이스크림을 획득할 수 있습니다.</b>
             </section>
         </section>
       
@@ -57,5 +56,4 @@
         </p>
     </main>
 </body>
-
 </html>
