--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
     <main>
         <section id="intro" class="section">
             <h2>부스 체험 방법</h2><br>
-			<p>미래를 창조하는 공학의 세계로 여러분을 초대합니다!</p>
-          	<p>병점고 공학·건축 융합 동아리 FM이 1년동안 준비한 프로젝트를 여러분께 소개할 수 있어 굉장히 기쁩니다.</p>
-          	<p>방문하시면 전시된 미래지향적 건축물을 보실 수 있는 것과 더불어 직접 아이스크림을 만들고 시식할 수 있습니다.</p>
-          	<p>방문하시면 공학의 재미, 미래의 기술을 직접 체험하실 수 있도록 해드리겠습니다.</p>
-        </section>
+		<b>뿅망치 게임</b>
+	        <p>가위바위보로 정해진 공수에서 상대보다 빠르게 뿅망치를 사용(방어)하세요!<br>5판 3선승제로 진행되어 최종 승자만이 아이스크림을 가져가게 됩니다.</p>
+		<img class="image" src="imageham.jpg" />
 
         <section id="activities" class="section">
             <h2>부스 하이라이트</h2>
             <section id="subactivities" class="subsection">
                 <h3>🏢 최첨단 빌딩 모형 전시회</h3>
-                공학 기술과 창의적 건축 설계를 접목시킨 미래지향적 건축물입니다. 보통의 건축물과 달리 우리 동아리만의 독특한 콘셉트와 방향성이 돋보이도록 설계했습니다. 모든 부원들이 참여하여 만든 만큼 퀄리티 하나는 보장합니다.
-		<br>
+                    공학 기술과 창의적 건축 설계를 접목시킨 미래지향적 건축물입니다.<br>
+		    보통의 건축물과 달리 우리 동아리만의 독특한 콘셉트와 방향성이 돋보이도록 설계했습니다.<br>
+		    모든 부원들이 참여하여 만든 만큼 퀄리티 하나는 보장합니다.<br>
                 <img class="image" src="image.jpg"/>
             </section>
             <section id="subactivities" class="subsection">
