--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		<b>뿅망치 게임</b>
 	        <p>가위바위보로 정해진 공수에서 상대보다 빠르게 뿅망치를 사용(방어)하세요!<br>5판 3선승제로 진행되어 최종 승자만이 아이스크림을 가져가게 됩니다.</p>
 		<img class="image" src="imageham.jpg" />
-
+	</section>
+		
         <section id="activities" class="section">
             <h2>부스 하이라이트</h2>
             <section id="subactivities" class="subsection">
