Hotfix for html

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <section id="intro" class="section">
             <h2>부스 체험 방법</h2><br>
 	    <section id="subactivities" class="subsection">
-		<b>(1) 뿅망치 게임</b>
+		<b>(1) 뿅망치 게임:</b>
                     가위바위보로 정해진 공수에서 상대보다 빠르게 뿅망치를 사용(방어)하세요!
 		<img class="image" src="imageham.jpg" />
 		<br>
-		<b>(2) 참참참 게임</b>
+		<b>(2) 참참참 게임:</b>
 		    자신의 손으로 상대를 패배시키세요!
 		<br>
-		5판 3선승제로 진행되어 최종 승자만이 아이스크림을 가져가게 됩니다.
 	    </section>
+	    5판 3선승제로 진행되어 최종 승자만이 아이스크림을 가져가게 됩니다.
 	</section>
 		
         <section id="activities" class="section">
